-*- coding: iso-8859-1 -*-
Mailman - The GNU Mailing List Management System
Copyright (C) 1998-2015 by the Free Software Foundation, Inc.
51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA

Here is a history of user visible changes to Mailman.

2.1.20 (xx-xxx-xxxx)

  Bug fixes and other patches

    - Fixed a bug in CommandRunner that threw an uncaught KeyError if
      the input to the list-request address contained a command word
      terminated by a period.  (LP: #1426825)

2.2 Branch Backports (released in conjunction with 2.1.19)

  The following New Features and Bug Fixes have been in an "unofficial,
  never to be released" Mailman 2.2 branch for several years. Until now,
  they were never implemented on the official 2.1 branch because of their
  i18n impacts.  Given that there have been a number of i18n impacting
  changes due to DMARC mitigations in the last few releases, it has been
  decided to backport these as well.

  All of these changes have been running in production on several lists
  for years without problems other than untranslated strings, so they should
  be reasonably "bug free".

  New Features

    - There is a new list attribute 'subscribe_auto_approval' which is a list
      of email addresses and regular expressions matching email addresses
      whose subscriptions are exempt from admin approval.  (LP: #266609)

    - Confirmed member change of address is logged in the 'subscribe' log,
      and if admin_notify_mchanges is true, a notice is sent to the list
      owner using a new adminaddrchgack.txt template.

    - Added an 'automate' option to bin/newlist to send the notice to the
      admin without the prompt.

    - The processing of Topics regular expressions has changed. Previously the
      Topics regexp was compiled in verbose mode but not documented as such
      which caused some confusion.  Also, the documentation indicated that
      topic keywords could be entered one per line, but these entries were not